add analog clock and date

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="needle second"></div>
         <div class="center-point"></div>
       </div>
-      <div class="time">12:00</div>
-      <div class="date">Saturday, Feb <span class="circle">4</span></div>
+      <div class="time"></div>
+      <div class="date"><span class="circle">4</span></div>
     </div>
 
     <script src="script.js"></script>
